Update to Java 17
One deprecated method replacement